2013-10-16  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync with English documentation rev. 1.701.2.30

2013-10-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c: Allow "set pm3d top/bottom" and "set pm3d interpolate N,M"
	to be active at the same time.

	* src/axis.c (gen_tics): Suppress log-scaled mtics and minor grid lines
	that would lie on top of the major tic/grid.
	Bug #1292

2013-10-06  Tag	Release_4_6_4

2013-10-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (polar_range_fiddling):  In a polar mode plot, if x, y,
	and r axes are all auto-scaled then prefer a symmetric plot centered at
	the origin with radius rmax over an asymmetric plot produced by treating
	the data ranges on x and y independently.

2013-10-01  Christoph Bersch <usenet@bersch.net>

	* src/plot2d.c (store_label):  Plots with labels should accept variable
	color both for the label text and for the associated point symbol.
        Bug #1281

2013-09-30  Josh Ovi  <joshovi@users.sourceforge.net>

	* src/graphics.c (plot_bars):  y errorbar whiskers were incorrectly
	drawn at the end of a clipped error bar.  If the error bar is clipped
	then it should have no whisker.
	Bug #1289

2013-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h:  Fix order of axis format initializers. Fortunately
	these were overwritten correctly on program entry by reset_command.

2013-09-23  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/Makefile.in:  It is not an error if a file to be uninstalled
	is already gone.

2013-09-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_grid):  Must initialize tic_direction when
	drawing r-axis tics.  Otherwise we get whatever the last set of
	x or y tics used, or if they have not been used then nothing at all.
	Bug #1286

	* src/qtterminal/QtGnuplotScene.cpp(QtGnuplotScene::processEvent):
	Revert one line of patch from 2013-05-23. typo? thinko? Anyhow it