@@ -1,3 +1,8 @@
+2013-10-17  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/save.c (place_objects): "show object N" was incorrectly printing
+	lines for other objects as well.
+
 2013-10-16  Shigeharu Takeno  <shige@iee.niit.ac.jp>
 
 	* docs/gnuplot-ja.doc docs/term-ja.diff:
